--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,15 @@
 body {
   background-color: red;
 }
+
+.app {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+}
+.quad{
+  width: 45%;
+  height: 50%;
+  border: 2px solid black;
+  text-align: center;
+}
