click event refactor, button interaction

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,9 +7,10 @@ body {
   flex-flow: row wrap;
   justify-content: flex-start;
 }
-.quad{
+.quad {
   width: 45%;
   height: 400px;
   border: 2px solid black;
   text-align: center;
+  background-color: cadetblue;
 }
